@@ -1,3 +1,8 @@
+2002-08-15  Christopher Armstrong  <radix@twistedmatrix.com>
+
+	* Releasing Twisted 0.99.0rc5, with some one severe bug-fix and
+	a few smaller ones.
+
 2002-08-14  Christopher Armstrong  <radix@twistedmatrix.com>
 
 	* Releasing Twisted 0.99.0rc1! ON THE WAY TO 1.0, BABY!  
